--- a/src/app/components/plataformas/plataformas.component.html
+++ b/src/app/components/plataformas/plataformas.component.html
@@ -41,7 +41,7 @@
           <p><strong>Plazo (Días):</strong> 4 - 30 días</p>
           <p><strong>Descuentos:</strong> Pagando en los primeros 10 días, 50% en costos de administración, seguro, interés y FGA.</p>
           <p><strong>Tiempo de desembolso:</strong> Por pago puntual ganas puntos que aumentan cupo, descuentos y días extra. Si cancelas en 10 días, obtienes 50% de descuento.</p>
-          <a href="https://www.lineru.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://www.lineru.com/preguntas-frecuentes/?gad_source=1&gad_campaignid=21614837174&gclid=CjwKCAjw_fnFBhB0EiwAH_MfZjn6oC5VBtZ7lHdjRjUAx_oysGtYmsC-XImAm38zK_zil3dMj1lzwRoC9UgQAvD_BwE" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -73,7 +73,7 @@
           <p><strong>Plazo (Días):</strong> Pago en 1 a 3 cuotas. Vencimiento entre 22 y 37 días.</p>
           <p><strong>Descuentos:</strong> Según puntaje crediticio.</p>
           <p><strong>Tiempo de desembolso:</strong> 2 a 24 horas hábiles. Solicitudes de fin de semana, día hábil siguiente. Si cuenta inválida, banco informa en 72 horas.</p>
-          <a href="https://www.solventa.com/faq" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://solventa.co/como-funciona" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
           <p><strong>Plazo (Días):</strong> 14 - 30 días o en 3 cuotas</p>
           <p><strong>Descuentos:</strong> 50% en tarifas e intereses del primer crédito. Si incumples, pierdes el beneficio.</p>
           <p><strong>Tiempo de desembolso:</strong> Máximo 2 días hábiles tras solicitud y firma.</p>
-          <a href="https://wasticredit.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://prestamos.wasticredit.com.co/preguntas-frecuentes" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
           <p><strong>Monto:</strong> 100.000 - 1.000.000</p>
           <p><strong>Plazo (Días):</strong> 4 - 30 días</p>
           <p><strong>Tiempo de desembolso:</strong> Primera solicitud: hasta 3 días hábiles. Solicitudes posteriores: en 1 día o menos.</p>
-          <a href="https://prestaenlinea.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://www.prestaenlinea.com.co/preguntas-frecuentes" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
           <p><strong>Monto:</strong> 500.000 - 1.000.000 (inicia desde 500.000 y crece hasta 10.000.000)</p>
           <p><strong>Plazo:</strong> De 7 a 12 meses</p>
           <p><strong>Tiempo de desembolso:</strong> 4 días</p>
-          <a href="https://quipu.co/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://quipu.com.co" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
           <p><strong>Monto:</strong> 500.000 - 1.100.000 (clientes nuevos hasta 500.000)</p>
           <p><strong>Plazo (Días):</strong> 7 - 30 días</p>
           <p><strong>Tiempo de desembolso:</strong> Hasta 24 horas hábiles tras aprobación.</p>
-          <a href="https://doctorpeso.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://doctorpeso.com.co/?utm_source=search_paid&utm_medium=google&utm_campaign=googleads_leads_campaign1&utm_term=ongoing_campaign_extralinks1&gad_source=1&gad_campaignid=21081081530&gclid=CjwKCAjw_fnFBhB0EiwAH_MfZhPx6Y67-mi6Sy5-_QuDP18h2e5ngom8rzO3GZbRGb2MIQ0MMeO0dRoCFc4QAvD_BwE" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -149,7 +149,7 @@
           <p><strong>Monto:</strong> 100.000 - 2.000.000</p>
           <p><strong>Plazo (Días):</strong> 1 a 180 días</p>
           <p><strong>Tiempo de desembolso:</strong> 24 horas</p>
-          <a href="https://prestanza.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://prestanza.com/colombia/solicitudes/prestamos-sobre-hipoteca/?gad_source=1&gad_campaignid=22478965341&gclid=CjwKCAjw_fnFBhB0EiwAH_MfZjtTm2WmwATaNaPshltJoxfn8Vlp4ZNrGvXSUJ9s3_A8BtIqEMS9jRoC_-cQAvD_BwE" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
           <p><strong>Monto:</strong> 100.000 - 2.000.000</p>
           <p><strong>Plazo (Días):</strong> Pago único (5 a 30 días) o en cuotas (2 a 4 meses)</p>
           <p><strong>Tiempo de desembolso:</strong> Máximo 24 horas hábiles según banco.</p>
-          <a href="https://yadinero.com/faqs" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
+          <a href="https://yadinero.co/preguntas-frecuentes?utm_source=google&utm_medium=cpc&utm_campaign=GAdsPMax&utm_content=%7Bassetid%7D&utm_term=pmax&gad_source=1&gad_campaignid=21054799430&gclid=CjwKCAjw_fnFBhB0EiwAH_MfZizXS7Gl_f8S7b5pQRwADg72vkTbqHP0QtaaTiE_-AN8sMeg_d9I1BoCsWgQAvD_BwE" target="_blank" class="btn btn-faq mt-auto">Preguntas frecuentes</a>
         </div>
       </div>
     </div>
