--- a/src/app/components/simuladores/galilea/simulador-galilea.component.html
+++ b/src/app/components/simuladores/galilea/simulador-galilea.component.html
@@ -2,9 +2,7 @@
   <h2>Calcula tu crédito</h2>
   <p class="text-limite-verde">Tu primera vez hasta $500.000</p>
 
-  <!-- Sección Horizontal -->
   <div class="horizontal-layout">
-    <!-- MONTO -->
     <div class="monto-section">
       <label for="monto">Elige el monto</label>
       <span class="monto-elegido">
@@ -21,26 +19,30 @@
       />
     </div>
 
-    <!-- FECHAS -->
     <div class="fechas-section">
       <p class="subtitulo-fecha">Elige la fecha de pago</p>
       <div class="fecha-opciones">
-        <button class="fecha-btn" [class.selected]="diasVencimiento === 14" (click)="seleccionarFecha(14)">
-          {{ obtenerFechaConDias(14) }}
-          <span *ngIf="diasVencimiento === 14" class="check-icon">✔</span>
-          <small>Vence en 14 días</small>
+        <button 
+          class="fecha-btn" 
+          [class.selected]="diasVencimiento === primeraFechaDias" 
+          (click)="seleccionarFecha(primeraFechaDias, primeraFechaBtn)">
+          {{ primeraFechaBtn | date:'dd/MM/yyyy' }}
+          <span *ngIf="diasVencimiento === primeraFechaDias" class="check-icon">✔</span>
+          <small>Vence en {{ primeraFechaDias }} días</small>
         </button>
 
-        <button class="fecha-btn" [class.selected]="diasVencimiento === 29" (click)="seleccionarFecha(29)">
-          {{ obtenerFechaConDias(29) }}
-          <span *ngIf="diasVencimiento === 29" class="check-icon">✔</span>
-          <small>Vence en 29 días</small>
+        <button 
+          class="fecha-btn" 
+          [class.selected]="diasVencimiento === segundaFechaDias" 
+          (click)="seleccionarFecha(segundaFechaDias, segundaFechaBtn)">
+          {{ segundaFechaBtn | date:'dd/MM/yyyy' }}
+          <span *ngIf="diasVencimiento === segundaFechaDias" class="check-icon">✔</span>
+          <small>Vence en {{ segundaFechaDias }} días</small>
         </button>
       </div>
     </div>
   </div>
 
-  <!-- COSTOS -->
   <div class="costos tarjeta">
     <h4>Costos fijos</h4>
     <div class="detalle">
@@ -68,7 +70,6 @@
     </div>
   </div>
 
-  <!-- TOTAL -->
   <div class="total tarjeta">
     <div class="detalle">
       <strong>Total a pagar</strong>
